@@ -22,6 +22,7 @@ detekt = "1.23.6"
 ktlint = "12.1.0"
 navigationCompose = "2.8.2"
 jb-androidx-navigation= "2.8.0-alpha10"
+kotlinx-serialization = "1.5.1"
 
 #Realm db (from tutorial):
 realm = "1.13.0"
@@ -49,6 +50,7 @@ jb-androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:n
 #detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 #detekt-api = { module = "io.gitlab.arturbosch.detekt:detekt-api", version.ref = "detekt" }
 #detekt-test = { module = "io.gitlab.arturbosch.detekt:detekt-test", version.ref = "detekt" }
+kotlinx-serializationJson = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
 #Realm db (from tutorial):
 mongodb-realm = { module = "io.realm.kotlin:library-base", version.ref = "realm"}
@@ -62,6 +64,7 @@ jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 #Realm db (from tutorial):
 realm-plugin = { id = "io.realm.kotlin", version.ref = "realm"}
